--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.1.4",
-    "framer-motion": "^11.0.24",
+    "framer-motion": "^10.12.16",
+    "gsap": "^3.11.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.63.6",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
