--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^11.0.25",
     "gsap": "^3.11.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.63.6",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "sass": "^1.63.6"
   },
   "devDependencies": {
     "@types/node": "^20",
